Refactoring business object name
